compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__equality_ops_enum_variants-4.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
assertion_line: 12
expression: "type e : enum(a, b) const _ := e.a ~= e.a"

---
"_"@(FileId(1), 26..27) -> Bool(false)


