compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__equality_ops_numeric-6.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: 2 = 2

---
"_"@(FileId(1), 6..7) -> Bool(true)


