compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_arithmetic_wrong_types-14.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: false - 1.0

---
ConstEvalCtx {
    inner: RwLock {
        data: InnerCtx {
            eval_infos: [
                EvalInfo { unit_id: UnitId(0), span: 11..22, state: Error(ConstError { kind: WrongOperandType, span: 17..18 }) },
            ],
            var_to_expr: {
                GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0 },
            },
        },
    },
}
ConstExpr { id: 0 } -> ConstError { kind: WrongOperandType, span: 17..18 }

error at 17..18: wrong type for compile-time expression

